tweaks to making the consumer more generic and adding useful configurations for WM reader clients

--- a/src/main/resources/compose.properties
+++ b/src/main/resources/compose.properties
@@ -3,8 +3,8 @@ kafka.group.id=consumer
 kafka.poll.timeout.millis=2000
 kafka.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 kafka.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-kafka.value.serializer=com.worldmodelers.kafka.messages.ExampleConsumerMessageSerializer
-kafka.value.deserializer=com.worldmodelers.kafka.messages.ExampleConsumerMessageDeserializer
+kafka.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+kafka.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 kafka.bootstrap.servers=kafka-broker-1:19092
 
 topic.from=stream.out
